Alterado o tipo de param da consultaCep e adicionado tratamento para Bad Request
